worked on the media queries and added some javascript

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 
         }
         .menu {
-            background: #ffffff;
+            background: rgba(20, 20, 20, 0.911));
             height: 120vh;
             padding-top: 30px;
             background-position: center;
-            background-attachment:fixed;margin-bottom: -5px;
+            background-attachment:fixed;
+            margin-bottom: -5px;
         }
         .menu div {
             float: left;
@@ -59,10 +60,10 @@
             width: 400px;
             height: 200px;
         }
-        @media all and (min-width: 430;) {
-            
-
-            
+        @media(max-width: 415px) {
+            .wrapper h2 {
+            font-size: 40px;
+            }
         }
     </style>
     <title>Skyland-Cafe</title>
