--- a/menu-pages/breakfast.html
+++ b/menu-pages/breakfast.html
@@ -44,134 +44,143 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Tea</h5>
+                        <span class="item-name">Tea</h5>
                         <p>An aromatic beverage commonly prepared by pouring 
-                        hot or boiling water over cured leaves of the Camellia sinensis, an evergreen
-                        shrub native to East Asia.</p>
-                        <p>Shs6000</p>
+                            hot or boiling water over cured leaves of the Camellia sinensis, an evergreen
+                            shrub native to East Asia.</p>
+                        <span class="item-price">Shs6000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Cereals with fruits</h5>
+                        <span class="item-name">Cereals with fruits</h5>
                         <p>Full of beautiful colors, juicy fruits, and hearty toppings,
                             this Healthy Fruit Cereal is a fun and delicious way to enjoy cereal in the morning!</p>
-                        <p>Shs12000</p>
+                        <span class="item-price">Shs12000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Coffee</h5>
+                        <span class="item-name">Coffee</h5>
                         <p>Freshly brewed African coffee that is served with a snack of your choice.</p>
-                        <p>Shs7000</p>
+                        <span class="item-price">Shs7000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Friedeggs.jpeg" alt="Fried eggs">
+                        <img src="/other-images/Breakfast/Friedeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Fried eggs</h5>
+                        <span class="item-name">Fried eggs</h5>
                         <p>The crispy olive oil fried egg. These fried eggs have golden, lacy,
-                             crispy edges, which contrast beautifully with their runny yellow yolks.</p>
-                        <p>Shs8500</p>
+                            crispy edges, which contrast beautifully with their runny yellow yolks.</p>
+                        <span class="item-price">Shs8500</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Milk.jpeg" alt="Milk">
+                        <img src="/other-images/Breakfast/Milk.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>A glass of cold or warm milk served with a snack of your choice. </h5>
-                        <p></p>
-                        <p>Shs5000</p>
+                        <span class="item-name">Milk</h5>
+                        <p>A glass of cold or warm milk served with a snack of your choice.</p>
+                        <span class="item-price">Shs5000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/omlette.jpeg" alt="omelette">
+                        <img src="/other-images/Breakfast/omlette.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Omelette</h5>
+                        <span class="item-name">Omelette</h5>
                         <p>An omelette is a dish made from beaten eggs fried with butter or oil in 
                             a frying pan. It is quite common for the omelette to be folded around 
                             fillings such as cheese, chives, vegetables, mushrooms, meat, 
                             or some combination of the above</p>
-                        <p>Shs11000</p>
+                        <span class="item-price">Shs11000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/pancakes.jpeg" alt="pancakes">
+                        <img src="/other-images/Breakfast/pancakes.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Pancakes</h5>
+                        <span class="item-name">Pancakes</h5>
                         <p>Fluffy cinnamin packs serve with pancake syrup.</p>
-                        <p>Shs13500</p>
+                        <span class="item-price">Shs13500</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Scrambledeggs.jpeg" alt="scrambled eggs">
+                        <img src="/other-images/Breakfast/Scrambledeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Scrambled eggs</h5>
+                        <span class="item-name">Scrambled eggs</h5>
                         <p>Eggs scrambled to your liking, garnished with parsely and served with fresh avocado.</p>
-                        <p>Shs14000</p>
+                        <span class="item-price">Shs14000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Toast.jpeg" alt="Toast">
+                        <img src="/other-images/Breakfast/Toast.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>French or American Toast</h5>
-                        <p></p>
-                        <p>Shs9000</p>
+                        <span class="item-name">French or American Toast</h5>
+                        <p>French or American Toast</p>
+                        <span class="item-price">Shs9000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </section>
-            <section class="cart">
-                <div class="cart-list">
-                    <h6>Orders</h6>
-                    
+            <section class="order">
+                <h2 class="section-header">ORDERS</h2>
+                <div class="order-row">
+                    <span class="order-item order-header order-column">ITEM</span>
+                    <span class="order-price order-header order-column">PRICE</span>
+                    <span class="order-quantity order-header order-column">QUANTITY</span>
                 </div>
+                <div class="order-items">
+                </div>
+                <div class="order-total">
+                    <strong class="total-title">Total</strong>
+                    <span class="total-price">Shs0</span>
+                </div>
+                <button class="btn btn-order" type="button">Place Order</button>
             </section>
         </section>
     </div>
@@ -194,9 +203,9 @@
             <div class="footer-content">
                 <h4>Follow Us</h4>
                 <ul>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-facebook-f"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
