--- a/menu-pages/drinks.html
+++ b/menu-pages/drinks.html
@@ -45,127 +45,136 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/CookiesandCreamMilkshake.png" alt="Cookies and cream milkshake">
+                        <img src="/other-images/Drinks/Soda.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Cookies and Cream Milkshake</h5>
-                        <p></p>
-                        <p>Shs16000</p>
-                    </div>
-                    <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
-                    </div>
-                </div>
-                <div class="list-b1">
-                    <div class="img">
-                        <img src="/other-images/Drinks/Soda.jpeg" alt="Soda">
-                    </div>
-                    <div class="item-d">
-                        <h5>Soft drinks</h5>
+                        <span class="item-name">Soft drinks</h5>
                         <p>A range of different carbonated soft drinks;</p>
-                        <p>Shs3000</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/HotChocolate.jpeg" alt="Hot chocolate">
+                        <img src="/other-images/Drinks/CookiesandCreamMilkshake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Hot Chocolate</h5>
-                        <p>Hot chocolate made with steamed whole or nonfat milk, rich chocolate syrup and topped with whipped topping and chocolate drizzle.</p>
-                        <p>Shs15000</p>
-                    </div>
-                    <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
-                    </div>
-                </div>
-                <div class="list-b1">
-                    <div class="img">
-                        <img src="/other-images/Drinks/LemoMojito.jpeg" alt="Lemon Mojito">
-                    </div>
-                    <div class="item-d">
-                        <h5>Lemon Mojito</h5>
+                        <span class="item-name">Cookies and Cream Milkshake</h5>
                         <p></p>
-                        <p>Shs20000</p>
+                        <span class="item-price">Shs16000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/StrawberryBananaSmoothie.png" alt="Strawberry Banana Smoothie">
+                        <img src="/other-images/Drinks/LemoMojito.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Strawberry Banana Smoothie</h5>
-                        <p>Strawberry Banana Smoothie is made with the perfect combination of fruit purees and juices, such as strawberry and banana, blended with creamy low fat yogurt and ice. </p>
-                        <p>Shs16000</p>
+                        <span class="item-name">Lemon Mojito</h5>
+                        <p></p>
+                        <span class="item-price">Shs20000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/MangoPineappleMilkshake.png" alt="Mango Pineapple Smoothie">
+                        <img src="/other-images/Drinks/HotChocolate.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Mango Pineapple Smoothie</h5>
-                        <p>Mango Pineapple Smoothie made with the sweet combination of fruit purees and juices, such as mango and pineapple, blended with creamy low fat yogurt and ice. </p>
-                        <p>Shs16000</p>
+                        <span class="item-name">Hot Chocolate</h5>
+                        <p>Hot chocolate made with steamed whole or nonfat milk, rich chocolate syrup and topped with whipped topping and chocolate drizzle.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/HibiscusRoseLatte.jpeg" alt="Rose latte">
+                        <img src="/other-images/Drinks/StrawberryBananaSmoothie.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Rose Latte</h5>
+                        <span class="item-name">Strawberry Banana Smoothie</h5>
+                        <p>Strawberry Banana Smoothie is made with the perfect combination of fruit purees and juices, such as strawberry and banana, blended with creamy low fat yogurt and ice.</p>
+                        <span class="item-price">Shs16000</span>
+                    </div>
+                    <div class="btn">
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
+                    </div>
+                </div>
+                <div class="list-b1">
+                    <div class="img">
+                        <img src="/other-images/Drinks/MangoPineappleMilkshake.png" alt="mixed berry mousse" class="item-img">
+                    </div>
+                    <div class="item-d">
+                        <span class="item-name">Mango Pineapple Smoothie</h5>
+                        <p>Mango Pineapple Smoothie made with the sweet combination of fruit purees and juices, such as mango and pineapple, blended with creamy low fat yogurt and ice.</p>
+                        <span class="item-price">Shs16000</span>
+                    </div>
+                    <div class="btn">
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
+                    </div>
+                </div>
+                <div class="list-b1">
+                    <div class="img">
+                        <img src="/other-images/Drinks/HibiscusRoseLatte.jpeg" alt="mixed berry mousse" class="item-img">
+                    </div>
+                    <div class="item-d">
+                        <span class="item-name">Rose Latte</h5>
                         <p>Hot latte made with steamed whole or nonfat milk, rich hibiscus syrup.</p>
-                        <p>Shs13000</p>
+                        <span class="item-price">Shs13000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/IcedCoffee.jpeg" alt="iced coffee">
+                        <img src="/other-images/Drinks/IcedCoffee.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Iced Coffee</h5>
+                        <span class="item-name">Iced Coffee</h5>
                         <p>Refreshingly cool and made with 100% Arabica beans, cream and your choice of flavored syrups – caramel, hazelnut, French vanilla and sugar-free French vanilla</p>
-                        <p>Shs15000</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Drinks/IcedTea.jpeg" alt="Iced Tea">
+                        <img src="/other-images/Drinks/IcedTea.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Iced Tea</h5>
-                        <p>Iced Tea, freshly brewed with a brisk blend of orange pekoe and pekoe cut black tea, served ice cold. </p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Iced Tea</h5>
+                        <p>Iced Tea, freshly brewed with a brisk blend of orange pekoe and pekoe cut black tea, served ice cold.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </section>
-            <section class="cart">
-                <div class="cart-list">
-                    <h6>Orders</h6>
-                    
+            <section class="order">
+                <h2 class="section-header">ORDERS</h2>
+                <div class="order-row">
+                    <span class="order-item order-header order-column">ITEM</span>
+                    <span class="order-price order-header order-column">PRICE</span>
+                    <span class="order-quantity order-header order-column">QUANTITY</span>
                 </div>
+                <div class="order-items">
+                </div>
+                <div class="order-total">
+                    <strong class="total-title">Total</strong>
+                    <span class="total-price">Shs0</span>
+                </div>
+                <button class="btn btn-order" type="button">Place Order</button>
             </section>
         </section>
     </div>
@@ -188,9 +197,9 @@
             <div class="footer-content">
                 <h4>Follow Us</h4>
                 <ul>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-facebook-f"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
