--- a/menu-pages/dessert.html
+++ b/menu-pages/dessert.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/all.min.css">
+    <script src="/js/menu.js" async></script>
     <style>
         body {
             background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/dessert4.jpeg);
@@ -44,127 +45,136 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/berry-mousse.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Mixed berry mousse</h5>
+                        <span class="item-name">Mixed berry mousse</h5>
                         <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <p>Shs15000</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/carrot-cake.png" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/Blackforest-Cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Carrot cake</h5>
-                        <p>a thick, sweet frosting made from cream cheese and nuts, and the use of whole cane sugar. </p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/Matcha-cake.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Matcha cake</h5>
-                        <p>It is commonly found in traditional Japanese mochi, as a filling, and as a base for cookies.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Vegan chocolate cake</h5>
-                        <p>the most popular vegan cake is the chocolate cake, so offer one made with 70% cocoa or higher, for example, with raspberry jam filling, and watch your clients fall in love.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Praline and ganache cake</h5>
-                        <p>Pralines, which are almonds or hazelnuts mixed with caramelized sugar, and ganache, which is a mix of cream and chocolate morsels, are two other very fashionable desserts right now.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/vanilla-icecream.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Blondie with vanilla ice cream</h5>
-                        <p>t's a brownie with less chocolate and more whole cane sugar, making it more "blonde" than the traditional version. It also has a much airier texture than the dense chocolate brownie, so it pairs well with a touch of liquor, like rum, or with a scoop of vanilla ice cream for contrasting sensations.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/Cheesecake.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Re-invented cheesecake</h5>
-                        <p>a lush coating of dulce de leche, which is made from caramelized condensed milk. Or try an oreo topping, as the classic chocolate-and-vanilla cookies are currently very on-trend in desserts, or passion fruit jam, whose tart notes are ideal for cheesecake.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/xl-meringue-pie.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>XL lemon meringue pie</h5>
-                        <p>is a guaranteed winner for your menu, and is sure to be a hit among all kinds of guests.</p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/images/tea-icecream.jpeg" alt="mixed berry mousse">
+                        <img src="/other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <h5>Tea and herbal tea ice cream</h5>
-                        <p>Swap traditional vanilla, chocolate, or strawberry ice creams for equally tasty but more modern flavors. For example, you could use a traditional green tea base, including matcha, or black tea with hints of cinnamon and orange. </p>
-                        <p>Shs15000</p>
+                        <span class="item-name">Mixed berry mousse</h5>
+                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
-                        <button><i class="fas fa-plus"></i></button>
+                        <button class="btn add-order"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </section>
-            <section class="cart">
-                <div class="cart-list">
-                    <h6>Orders</h6>
-                    
+            <section class="order">
+                <h2 class="section-header">ORDERS</h2>
+                <div class="order-row">
+                    <span class="order-item order-header order-column">ITEM</span>
+                    <span class="order-price order-header order-column">PRICE</span>
+                    <span class="order-quantity order-header order-column">QUANTITY</span>
                 </div>
+                <div class="order-items">
+                </div>
+                <div class="order-total">
+                    <strong class="total-title">Total</strong>
+                    <span class="total-price">Shs0</span>
+                </div>
+                <button class="btn btn-order" type="button">Place Order</button>
             </section>
         </section>
     </div>
@@ -187,9 +197,9 @@
             <div class="footer-content">
                 <h4>Follow Us</h4>
                 <ul>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-facebook-f"></i></a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fas fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
