--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .wrapper h2 {
-            font-size: 70px;
+            font-size: 70px;https://us04web.zoom.us/j/738395761?pwd=SnZVWVp0cUt5a3VTeUM5NVlLYXhlZz09
         }
         .welcome {
             height: 100;
