--- a/menu-pages/food.html
+++ b/menu-pages/food.html
@@ -47,9 +47,9 @@
                         <img src="/other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Creamy mushroom soup</h5>
+                        <p>Cream of mushroom, infused with black peppercorn & parsley. Served with crispy baguette slices.</p>
+                        <span class="item-price">Shs16000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -60,9 +60,9 @@
                         <img src="/other-images/dessert/Blackforest-Cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Baked chicken drumsticks and potato wedges</h5>
+                        <p></p>
+                        <span class="item-price">Shs25000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -73,8 +73,8 @@
                         <img src="/other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
+                        <span class="item-name">Beef burger with fries</h5>
+                        <p></p>
                         <span class="item-price">Shs15000</span>
                     </div>
                     <div class="btn">
@@ -86,9 +86,9 @@
                         <img src="/other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Cheese fries</h5>
+                        <p></p>
+                        <span class="item-price">Shs12000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -99,9 +99,9 @@
                         <img src="/other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Chicken Wrap</h5>
+                        <p></p>
+                        <span class="item-price">Shs16000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -112,9 +112,9 @@
                         <img src="/other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Chicken Biryani</h5>
+                        <p></p>
+                        <span class="item-price">Shs23000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -125,9 +125,9 @@
                         <img src="/other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Club Sandwich</h5>
+                        <p></p>
+                        <span class="item-price">Shs20000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -138,9 +138,9 @@
                         <img src="/other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Honey Mustard Porkchops</h5>
+                        <p></p>
+                        <span class="item-price">Shs32000</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
@@ -151,9 +151,9 @@
                         <img src="/other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mixed berry mousse</h5>
-                        <p>A mousse is always a great dessert option, thanks to its texture and its simplicity. Especially now that artisanal food and authentic flavors are in vogue. Offer a mixed berry version of this creamy dessert for a delicious combination of sweet and tart. This is the perfect light option to offer clients after a hearty meal.</p>
-                        <span class="item-price">Shs15000</span>
+                        <span class="item-name">Pasta</h5>
+                        <p></p>
+                        <span class="item-price">Shs13500</span>
                     </div>
                     <div class="btn">
                         <button class="btn add-order"><i class="fas fa-plus"></i></button>
