--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <style>
         body {
             background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/landing.jpeg);
@@ -18,14 +18,14 @@
             text-align: center;
         }
         .wrapper h2 {
-            font-size: 70px;https://us04web.zoom.us/j/738395761?pwd=SnZVWVp0cUt5a3VTeUM5NVlLYXhlZz09
+            font-size: 70px;
         }
         .welcome {
             height: 100;
 
         }
         .menu {
-            background: rgba(20, 20, 20, 0.911));
+            background: rgba(20, 20, 20, 0.911);
             height: 120vh;
             padding-top: 30px;
             background-position: center;
@@ -39,7 +39,6 @@
         }
         .menu h3 {
             padding-top: 30px;
-            font-size: ;
         }
         .menu h4 {
             font-size: 30px;
@@ -52,9 +51,6 @@
         }
         .menu h3 a:hover {
             color: #303036;
-        }
-        .breakfast .food .drinks .dessert {
-            display: ;
         }
         div img {
             width: 400px;
@@ -77,12 +73,12 @@
             <h1>SkylineCafe</h1>
         </div>
         <ul class="nav-menu show">
-            <li><a href="landing.html">HOME</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="/log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <div class="wrapper">
@@ -93,20 +89,20 @@
         <div class="menu">
             <h4>Our Menu</h4>
             <div class="breakfast">
-                <img src="/main-images/breakfast.jpeg" alt="">
-                <h3><a href="/menu-pages/breakfast.html">BREAKFAST</a></h3>
+                <img src="./main-images/breakfast.jpeg" alt="">
+                <h3><a href="./menu-pages/breakfast.html">BREAKFAST</a></h3>
             </div>
             <div class="food">
-                <img src="/main-images/lunch.jpeg" alt="">
-                <h3><a href="/menu-pages/food.html">FOODS</a></h3>
+                <img src="./main-images/lunch.jpeg" alt="">
+                <h3><a href="./menu-pages/food.html">FOODS</a></h3>
             </div>
             <div class="dessert">
-                <img src="/main-images/dessert4.jpeg" alt="">
-                <h3><a href="/menu-pages/dessert.html">DESSERT</a></h3>
+                <img src="./main-images/dessert4.jpeg" alt="">
+                <h3><a href="./menu-pages/dessert.html">DESSERT</a></h3>
             </div>
             <div class="drinks">
-                <img src="/main-images/drinks.jpeg" alt="">
-                <h3><a href="/menu-pages/drinks.html">DRINKS</a></h3>
+                <img src="./main-images/drinks.jpeg" alt="">
+                <h3><a href="./menu-pages/drinks.html">DRINKS</a></h3>
             </div>
         </div>
     </div> 
@@ -121,10 +117,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="/menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="/menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="/menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="/menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
