--- a/menu-pages/breakfast.html
+++ b/menu-pages/breakfast.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <style>
         body {
             background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/breakfast.jpeg);
@@ -27,12 +27,12 @@
             <h1>Skyline<span style="color:rgb(255, 255, 255)">Cafe</span></h1>
         </div>
         <ul class="nav-menu show">
-            <li><a href="/index.html">HOME</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="/log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <header>
@@ -44,7 +44,7 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Tea</h5>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Cereals with fruits</h5>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Coffee</h5>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Friedeggs.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Friedeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Fried eggs</h5>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Milk.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Milk.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Milk</h5>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/omlette.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/omlette.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Omelette</h5>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/pancakes.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/pancakes.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Pancakes</h5>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Scrambledeggs.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Scrambledeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Scrambled eggs</h5>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/Breakfast/Toast.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="./other-images/Breakfast/Toast.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">French or American Toast</h5>
@@ -194,10 +194,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="/menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="/menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="/menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="/menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
