--- a/log-pages/signup.html
+++ b/log-pages/signup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sign.css">
+    <link rel="stylesheet" href=".sign.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="/index.html">SkylineCafe</a></h1>
+    <h1><a href="./index.html">SkylineCafe</a></h1>
     <div class="Register">
         <h2>SIGN UP HERE</h2>
         <label for="email">Email</label><br>
@@ -20,7 +20,7 @@
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required><br>
         <button type="submit">Sign Up</button>
         <hr>
-        <p>Already have an account?<a href="signin.html">Sign In Here</a></p>
+        <p>Already have an account?<a href=".signin.html">Sign In Here</a></p>
     </div>
 </body>
 </html>
